# ast-mcp

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.scripts/: stdio-smoke.sh
docs/ast-mcp-v1/: README.md  contract.md  phases.md  position-encoding.md  v1-acceptance.md
spec/: version-1.md  version-2.md  version-3.md  version-4.md  version-5.md
src/: lib.rs  main.rs
src/analysis/: complexity.rs  duplicate_shapes.rs  fingerprints.rs  large_nodes.rs  mod.rs
src/cache/: framework_result_cache.rs  mod.rs  parse_tree_cache.rs  query_result_cache.rs
src/config/: defaults.rs  env_config.rs  mod.rs  runtime_config.rs  validate_config.rs  workspace.rs
src/context/: context_for_range.rs  context_pack.rs  enclosing_scope.rs  mod.rs  node_at_range.rs  node_at_range_helpers.rs  node_text.rs
src/extraction/: calls.rs  literals.rs  member_access.rs  mod.rs  template_literals.rs
src/extractors/: chunks.rs  classes.rs  enclosing_node.rs  exports.rs  functions.rs  imports.rs  mod.rs  outline.rs  queries.rs  top_level.rs
src/frameworks/: mod.rs
src/languages/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/mcp/: mod.rs  register_tools.rs  responses.rs  server_context.rs  transport.rs
src/metrics/: file_metrics.rs  function_metrics.rs  mod.rs  nesting.rs
src/observability/: mod.rs  request_log.rs  request_tracker.rs
src/ops/: liveness.rs  mod.rs  parser_status.rs  readiness.rs  (+1 more)
src/parser/: mod.rs  (+4 more)
tests/: architecture.rs  architecture_no_panic.rs  enclosing_node_test.rs  functions_classes_chunks_test.rs  fuzz_parser.rs  imports_exports_test.rs  integration_sweep.rs  outline_test.rs  parse_file_test.rs  parser.rs  position_utf16_test.rs  positions_test.rs  query_test.rs  safety.rs  safety_rejections.rs  safety_truncation.rs  transport.rs  v3.rs  v4.rs
(+207 files in other folders)
